--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
